# django-graphql

./: .gitignore  README.md  pyproject.toml
apps/cards/: schema.py
apps/cards/migrations/: 0001_initial.py
apps/decks/: schema.py
apps/decks/migrations/: 0001_initial.py
apps/schema/: schema.py
apps/users/: models.py
apps/users/migrations/: 0001_initial.py  0002_auto_20210128_1252.py  0003_auto_20210128_1256.py
config/: settings.py  urls.py  wsgi.py
