[tool.poetry]
name = "graphql"
version = "0.1.0"
description = "Learn graphql"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework = "^3.15.2"
Django = "4.2.26"
psycopg2-binary = "^2.8.6"
graphene-django = "^2.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
